# Bachelorarbeit

./: .gitignore  config.py  gitignore  optimizer.py  pyproject.toml
Deepfake-Detektion/: datamodule.py  main.py  model.py  utils.py
rPPG-Signaloptimierung/: face_detector.py  face_tracker.py  main.py  mask_manager.py  mp_config.py  path_config.py  pulse_signal_processor.py  signal_processor.py  snr_analyzer.py  snr_optimizer.py  video_handler.py  video_processor.py
