[tool.poetry]
name = "rppg-facepatches"
version = "0.1.0"
description = "Initial project to extract rPPG signal from face patches"
authors = ["L. Franz"]
readme = "README.md"
packages = [
    { include = "rppg_facepatches" }
]

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "0.10.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
opencv-python = "^4.10.0.82"
torchmetrics = '*'
imblearn = '*'
optuna = '*'
plotly = '*'
lightning = '*'
pytorch-lightning = '*'
optuna-integration = "^3.6.0"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
tensorboard = "^2.17.0"
psutil = "^6.0.0"
dill = "^0.3.8"
pathos = "^0.3.2"
tqdm = "^4.66.4"
kaleido = "0.2.1"
yacs = "^0.1.8"
scikit-image = "^0.24.0"
retina-face = { git = "https://github.com/serengil/retinaface.git" }
pandas = "^2.2.2"
tf-keras = "^2.17.0"
mat73 = "^0.64"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
pywavelets = "^1.6.0"
lifelines = "^0.29.0"
colorama = "^0.4.6"
tabulate = "^0.9.0"
pyemd = "^1.0.0"
emd-signal = "^1.6.0"
h5py = "^3.11.0"
pylatex = "^1.4.2"
kneed = "^0.8.5"
scikit-posthocs = "^0.9.0"



[tool.poetry.group.test.dependencies]
black = "*"
pylint = "*"
mypy = "*"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true

[tool.pylint]
max-line-length = 88
